--- a/Suggestunes/src/app/playlists/playlist/playlist.component.html
+++ b/Suggestunes/src/app/playlists/playlist/playlist.component.html
@@ -9,7 +9,7 @@
       </div>
     </div>
   <button *ngIf="has_active_device" (click) = "play()">play some jams</button>
-  <div class="body container-fluid"> 
+  <div class="body container-fluid">
     <button class="btn editButton" type="button" data-bs-toggle="modal" data-bs-target="#editPlaylistModal">Edit playlist</button>
     <app-edit-playlist-modal [target_playlist] = "playlist"></app-edit-playlist-modal>
     <div class="mb-3">
@@ -21,7 +21,15 @@
       </form>
     </div>
   </div>
-      <button class="list-group-item" *ngFor="let item of this.searchResults">{{item.name}}</button>
+  <button *ngFor="let item of this.searchResults" class = "list-group-item" (click)="add(item)">
+    <img class = "track-img" alt = "default image" src = "{{item.album!.images![0].url}}">
+    <p>
+        <span class = "top">{{item.name!}} <br>
+      </span>
+
+      <span class="bottom">{{item.artists![0].name!}}</span>
+    </p>
+  </button>
 
   <div class="list-group list-group-flush text-md-start">
     <button *ngFor="let item of this.playlist!.songs!" class = "list-group-item" (click)="play(item.uri!)">
@@ -32,4 +40,4 @@
     </p>
     </button>
   </div>
-</div> 
+</div>
