--- a/Suggestunes/src/app/playlists/playlist/playlist.component.html
+++ b/Suggestunes/src/app/playlists/playlist/playlist.component.html
@@ -10,8 +10,10 @@
     </div>
   <button *ngIf="has_active_device" (click) = "play()">play some jams</button>
   <div class="body container-fluid">
-    <button class="btn editButton" type="button" data-bs-toggle="modal" data-bs-target="#editPlaylistModal">Edit playlist</button>
-    <app-edit-playlist-modal [target_playlist] = "playlist"></app-edit-playlist-modal>
+    <span *ngIf="this.has_active_device">
+      <button class="btn editButton" type="button" data-bs-toggle="modal" data-bs-target="#editPlaylistModal">Edit playlist</button>
+      <app-edit-playlist-modal [target_playlist] = "playlist"></app-edit-playlist-modal>
+    </span>
     <div class="mb-3">
       <form class="form-label" #songForm="ngForm" (ngSubmit)="search(songForm)" >Add Songs
         <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Song Title" ngModel name="track">
@@ -21,6 +23,7 @@
       </form>
     </div>
   </div>
+  <div class ="list-group list-group-flush text-md-start">
   <button *ngFor="let item of this.searchResults" class = "list-group-item" (click)="add(item)">
     <img class = "track-img" alt = "default image" src = "{{item.album!.images![0].url}}">
     <p>
@@ -30,6 +33,7 @@
       <span class="bottom">{{item.artists![0].name!}}</span>
     </p>
   </button>
+  </div>
 
   <div class="list-group list-group-flush text-md-start">
     <span *ngIf="show">
