--- a/Suggestunes/src/app/layouts/playlist-home-layout/playlist-home-layout.component.html
+++ b/Suggestunes/src/app/layouts/playlist-home-layout/playlist-home-layout.component.html
@@ -5,7 +5,7 @@
   <div class="d-flex justify-content-center">
     <div id="native_container" class="list-group list-group-flush text-md-start" >
       <h5>Your Playlists</h5>
-      <span *ngIf="show"  style="border:none;"><a *ngFor="let item of getEntries()" href="/playlists/playlist/false/{{item[0]}}" class = "list-group-item"> <img alt = "default image" src = "{{item[1].image}}"><p>{{item[1].name}}</p></a></span>
+      <span *ngIf="show"  style="border:none;"><button *ngFor="let item of getEntries()" (click)="router.navigate(['playlists/playlist/false/'+item[0]])" class = "list-group-item"> <img alt = "default image" src = "{{item[1].image}}"><p>{{item[1].name}}</p><button class="addBtn btn " (click)="remove(item[0])">-</button></button></span>
     </div>
   </div>
   <span *ngIf="has_spotify">
