--- a/Suggestunes/src/app/playlists/playlist/playlist.component.html
+++ b/Suggestunes/src/app/playlists/playlist/playlist.component.html
@@ -24,16 +24,18 @@
     </div>
   </div>
   <div class ="list-group list-group-flush text-md-start">
-  <button *ngFor="let item of this.searchResults" class = "list-group-item" (click)="add(item)">
-    <img class = "track-img" alt = "default image" src = "{{item.album!.images![0].url}}">
+  <button *ngFor="let item of this.searchResults" class = "list-group-item" (click)="play(item!.uri)">
+    <img class = "track-img" alt = "default image" src = "{{item.image}}">
     <p>
         <span class = "top">{{item.name!}} <br>
       </span>
 
-      <span class="bottom">{{item.artists![0].name!}}</span>
+      <span class="bottom">{{item.artist}}</span>
     </p>
+    <button class="addBtn btn " (click)="add(item)">+</button>
   </button>
   </div>
+  <h2 class = 'pad'>Songs In This Playlist</h2>
 
   <div class="list-group list-group-flush text-md-start">
     <span *ngIf="show">
@@ -43,6 +45,7 @@
         <span class = "top" style="font-size: large;">{{item.name!}} <br> </span>
       <span class="bottom" style="font-size:small;">{{item.artist!}}</span>
     </p>
+      <button class="addBtn btn " (click)="remove(item)">-</button>
     </button>
     </span>
   </div>
