--- a/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.html
+++ b/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.html
@@ -14,8 +14,8 @@
         <div class = dropdown-content>
           <a href = "AccountLayout">View Profile</a>
           <a href = "ChangeUpLayout">Change Username/Password</a>
-          <a data-bs-toggle="modal" data-bs-target="#bioModal">Change Bio</a>
-          <a (click) = (callLogout())>Logout</a>
+          <a data-bs-toggle="modal" data-bs-target="#bioModal" style="cursor: pointer;">Change Bio</a>
+          <a (click) = (callLogout()) style="cursor: pointer;">Logout</a>
         </div>
       </div>
       <h5 class = "nav-item" style = "float: right; font-size: 1rem; margin-top: 5px;">{{username}}</h5></span>
