Added "My Playlists" widget functionality

--- a/Suggestunes/src/app/Layouts/account-layout/card/card.component.html
+++ b/Suggestunes/src/app/Layouts/account-layout/card/card.component.html
@@ -1,7 +1,6 @@
-<div class="card" style="width: 10rem; display: inline-block; background-color:#66318D">
+<div (click) = "reroute()" class="card" style="width: 10rem; display: inline-block; background-color:#66318D">
     <img class="card-img-top" src={{img}} alt="">
     <div class="card-body">
-      <h5 class="card-title">{{imgDescription}}</h5>
-      <p class="card-text">{{description}}</p>
+      <p class="card-text">{{name}}</p>
     </div>
-  </div>
+</div>
