--- a/Suggestunes/src/app/Layouts/account-layout/account-layout.component.html
+++ b/Suggestunes/src/app/Layouts/account-layout/account-layout.component.html
@@ -5,9 +5,9 @@
     <h1 style = "text-decoration: underline;">My Playlists</h1>
     <div style = "overflow-x: scroll; max-width: 1152px; margin: 0 auto; white-space: nowrap">
         <div style="display: inline-block" *ngFor = "let item of cards">
-            <app-card img = {{item.img}} description = {{item.description}} imgDescription={{item.imgDescription}}></app-card>
+            <app-card img = {{item.img}} link = {{item.link}} name = {{item.name}}></app-card>
         </div>
-        <a class = "showAllButton" href = "#">Show All</a>
+        <a class = "showAllButton" href = "playlists">Show All</a>
     </div>
 </div>
 <div class="spotify-component">
