Fixed nav-bar html error

--- a/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.html
+++ b/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.html
@@ -16,7 +16,7 @@
           <a (click) = (callLogout()) style="cursor: pointer;">Logout</a>
         </div>
       </div>
-      <h5 class = "nav-item" style = "float: right; font-size: 1rem; margin-top: 5px;">{{username}}</h5></span>
+      <h5 class = "nav-item" style = "float: right; font-size: 1rem; margin-top: 5px;">{{username}}</h5>
   </div>
 </div>
 
