fixed navbar formatting

--- a/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.html
+++ b/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.html
@@ -7,6 +7,7 @@
       <a class = "nav-item" href = "#"><h5 class = "nav-button">Songs</h5></a>
       <a class = "nav-item" href = "playlists"><h5 id = "playlist-btn" class = "nav-button">Playlists</h5></a>
       <a class = "nav-item" href = "#"><h5 class = "nav-button">Discover</h5></a>
+    <span>
       <div class = "dropdown nav-item">
         <a class = "nav-item"><img alt = "" src = "https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" style="border-radius: 50%;" height = "32px" width = "32px"></a>
         <div class = dropdown-content>
@@ -17,6 +18,7 @@
         </div>
       </div>
       <h5 class = "nav-item" style = "float: right; font-size: 1rem; margin-top: 5px;">{{username}}</h5>
+  </span>
   </div>
 </div>
 
