--- a/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.html
+++ b/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.html
@@ -4,7 +4,7 @@
       <a class = "nav-item" href = "#"><h3 class = "logo">Suggestunes</h3></a>
       <div class = "nav-item" style = "width: 10px;"></div>
     </span>
-      <a class = "nav-item" href = "#"><h5 class = "nav-button">Songs</h5></a>
+      <a class = "nav-item" href = "/songs"><h5 class = "nav-button">Songs</h5></a>
       <a class = "nav-item" href = "playlists"><h5 id = "playlist-btn" class = "nav-button">Playlists</h5></a>
       <a class = "nav-item" href = "#"><h5 class = "nav-button">Discover</h5></a>
     <span>
