--- a/Suggestunes/src/app/Layouts/account-layout/account-layout.component.html
+++ b/Suggestunes/src/app/Layouts/account-layout/account-layout.component.html
@@ -2,7 +2,7 @@
 <div style = "height: 100px;"></div>
 <app-account-info></app-account-info>
 <div class="spotify-component" style="width:fit-content; margin: 0 auto;">
-    <button class="addBtn btn ">Link your Spotify</button>
+    <button class="addBtn btn" (click) = "spotify.spotifyAuth()">Link your Spotify</button>
 </div>
 <div class = "playlists-component">
     <h1 style = "text-decoration: underline;">My Playlists</h1>
