Commented  on two files

--- a/Suggestunes/src/app/landing-page/landing-navbar/landing-navbar.component.html
+++ b/Suggestunes/src/app/landing-page/landing-navbar/landing-navbar.component.html
@@ -1,11 +1,14 @@
-
+<!-- @author Jalen Beeman-->
 <nav class="navbar navbar-expand bg-body-tertiary">
     <div class="container-fluid">
         <a class="navbar-brand logo" href="#">Suggestunes</a>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         </ul>
+        <!-- Creating the flex container for our buttons-->
         <form class="d-flex">
+            <!-- Button redirects to log in page-->
             <a href="/signin" class="btn nav-button" style="margin-right: 5px;">Log in</a>
+            <!-- Button redirects to sign up page-->
             <a href="/register" class="btn nav-button" style="margin-left: 5px">Sign up</a>
         </form>
     </div>
