--- a/Suggestunes/src/app/playlists/playlist/playlist.component.html
+++ b/Suggestunes/src/app/playlists/playlist/playlist.component.html
@@ -36,10 +36,11 @@
     <button class="addBtn btn " (click)="add(item)">+</button>
   </button>
   </div>
+
   <h2 class = 'pad'>Songs In This Playlist <button class="refresh addBtn btn" (click)="reload()">refresh</button></h2>
 
   <div class="list-group list-group-flush text-md-start">
-    <span *ngIf="show">
+    <span *ngIf="show" ng-cloak>
     <button *ngFor="let item of this.playlist!.songs!" class = "list-group-item" (click)="spotify.play(this.is_spotify,playlist,item)">
       <img class = "track-img" alt = "default image" src = "{{item.image!}}">
       <p>
