Added comments for several files

--- a/Suggestunes/src/app/landing-page/homepage-footer/homepage-footer.component.html
+++ b/Suggestunes/src/app/landing-page/homepage-footer/homepage-footer.component.html
@@ -1,19 +1,23 @@
+<!-- @author William Valentine-->
+<!-- Initializing the card container that is the footer-->
 <div class="d-flex flex-row align-items-center border-subtle border-top border-secondary" style="border-color: #4b4b4b;">
         <div class="footer-card p-2 flex-fill">
             <div class="card-title footer-text" style="text-align: center;"> SuggesTunes
             </div>
+            <!-- Creating the first card, which contains a button directing to the link below-->
             <div class="card-body" style="text-align: center;">
                 <p class="card-text footer-text"> Subscribe to our newsletter that doesn't exist</p>
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-primary" style="background-color: #66318D; border:#66318D;">Subscribe</a>
             </div>
         </div>
-
+        <!-- Creating a second card displaying the text below-->
         <div class="footer-card p-2 flex-fill">
             <div class="card-body">
                 <p class="footer-text"> Copyright: ©We don't have one</p>
             </div>
         </div>
 
+        <!-- creating the third card in the row, displaying a button to contact one of the members of the group-->
         <div class="footer-card p-2 flex-fill">
             <div class="card-body">
               <a href="mailto:jam00056@mix.wvu.edu" class="btn btn-primary" style="background-color: #66318D; border:#66318D;">Contact Us</a>
