--- a/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.html
+++ b/Suggestunes/src/app/Navigation/nav-bar/nav-bar.component.html
@@ -4,14 +4,14 @@
       <a class = "nav-item" href = "#"><h3 class = "logo">Suggestunes</h3></a>
       <div class = "nav-item" style = "width: 10px;"></div>
     </span>
-      <a class = "nav-item" href = "#/songs"><h5 class = "nav-button">Songs</h5></a>
-      <a class = "nav-item" href = "#/playlists"><h5 id = "playlist-btn" class = "nav-button">Playlists</h5></a>
+      <a class = "nav-item" href = "/songs"><h5 class = "nav-button">Songs</h5></a>
+      <a class = "nav-item" href = "/playlists"><h5 id = "playlist-btn" class = "nav-button">Playlists</h5></a>
     <span>
       <div class = "dropdown nav-item">
         <a class = "nav-item"><img alt = "" src = "https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" style="border-radius: 50%;" height = "32px" width = "32px"></a>
         <div class = dropdown-content>
-          <a href = "#/AccountLayout">View Profile</a>
-          <a href = "#/ChangeUpLayout">Change Username/Password</a>
+          <a href = "/AccountLayout">View Profile</a>
+          <a href = "/ChangeUpLayout">Change Username/Password</a>
           <a data-bs-toggle="modal" data-bs-target="#bioModal" style="cursor: pointer;">Change Bio</a>
           <a (click) = (callLogout()) style="cursor: pointer;">Logout</a>
         </div>
