Updated index.js almost implemented cyanite

--- a/Suggestunes/src/app/playlists/playlist/playlist.component.html
+++ b/Suggestunes/src/app/playlists/playlist/playlist.component.html
@@ -22,7 +22,7 @@
                   Search
           </button>
       </form>
-      <button type="submit" class="Suggestion button" (ngSubmit)="getSuggestions()">
+      <button type="submit" class="Suggestion button" (click)="getSuggestions()">
         Get Suggestions
       </button> 
     </div>
