--- a/Suggestunes/src/styles.css
+++ b/Suggestunes/src/styles.css
@@ -3,5 +3,5 @@
 body{
   background-color: #1E1E1E;
   color: white!important;
-  font-family: 'JetBrains Mono', Jetbrains;
+  font-family: 'JetBrains Mono', Jetbrains!important;
 }
