--- a/Suggestunes/src/app/playlists/playlist/playlist.component.html
+++ b/Suggestunes/src/app/playlists/playlist/playlist.component.html
@@ -11,7 +11,7 @@
     <span>
       <span *ngIf="!this.is_spotify">
         <button class="btn editButton" type="button" data-bs-toggle="modal" data-bs-target="#editPlaylistModal">Edit playlist</button>
-        <app-edit-playlist-modal [target_playlist] = "playlist"></app-edit-playlist-modal>
+        <app-edit-playlist-modal [id] = 'this.playlist_id$' [target_playlist] = "playlist"></app-edit-playlist-modal>
       </span>
       <button *ngIf="has_active_device && is_spotify" (click) = "spotify.play(is_spotify,playlist)" class="btn editButton">play some jams</button>
     </span>
