got suggestions to work with non-spotify playlists

--- a/Suggestunes/src/app/playlists/playlist/playlist.component.html
+++ b/Suggestunes/src/app/playlists/playlist/playlist.component.html
@@ -37,7 +37,7 @@
 
       <span class="bottom">{{item.artist}}</span>
     </p>
-    <button class="addBtn btn " (click)="add(item)">+</button>
+    <button class="addBtn btn " (click)="addSearch(item)">+</button>
   </button>
   </div>
 <div class ="list-group list-group-flush text-md-start">
@@ -50,7 +50,7 @@
 
       <span class="bottom">{{item.artist}}</span>
     </p>
-    <button class="addBtn btn " (click)="add(item)">+</button>
+    <button class="addBtn btn " (click)="addSuggestion(item)">+</button>
   </button>
   </div>
 </div>
